edits before sending this off to graphiti

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/every-layout.css">
     <title>{{ title }}</title>
   </head>
-  <div style="padding: 0 1rem;">
+  <div style="padding: 0 .3rem;">
     {% include "partials/site-head.html" %}
   
     <main tabindex="-1" id="main-content">
