--- a/src/_includes/partials/cta.html
+++ b/src/_includes/partials/cta.html
@@ -14,7 +14,7 @@
           <a class="button box" data-variant="ghost" href="{{ ctaPrefix.yesButtonUrl }}">{{ ctaPrefix.yesButtonText }}</a>
         </div>
         <div class="box">
-          <a class="button invert box" data-variant="ghost" href="{{ ctaPrefix.yesButtonUrl }}">{{ ctaPrefix.noButtonText }}</a>
+          <a class="button invert box" data-variant="ghost" href="{{ ctaPrefix.noButtonUrl }}">{{ ctaPrefix.noButtonText }}</a>
         </div>
       </div>
 
